--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
   padding: 0;
   margin: 0;
   background:#e6e6e6;
+  font-family: Source Sans Pro,sans-serif;
 }
 
 header{
@@ -16,7 +17,7 @@ header{
   background:	 white;
   display: flex;
   color: black;
-  font-family:agency fb;
+  font-family:Source Sans Pro, sans-serif;
   letter-spacing: 2px;
   font-size: 18px;
   font-weight: bold;
@@ -42,6 +43,9 @@ header ul li{
 }header ul li:hover{
   color:royalblue;
 }
+header ul #home{
+  display: none;
+}
 
 header a {
   color: inherit;
@@ -50,7 +54,7 @@ header a {
 #banniere{
      height:450px;
      width: 100%;
-     background: url("./image/font.jpg");
+     background: url("./image/06.jpg");
      flex-direction: column;
      background-color: black;
      /* filter:grayscale(35%) contrast(55%); */
@@ -112,7 +116,7 @@ header a {
   width: 100%;
   display: flex;
   justify-content: space-between;
-    font-family:agency fb,sans-serif;
+    font-family:Source Sans Pro,sans-serif;
   /* align-items:center; */
 }
 #l1 i{
@@ -150,7 +154,7 @@ header a {
 #competences h3{
   width: 90%;
   font-size: 45px;
-  font-family:agency fb,sans-seri;
+  font-family:Source Sans Pro,sans-seri;
 }
 #c1{
   height:180px;
@@ -266,7 +270,7 @@ header a {
   width: 100%;
   background: #3385ff;
   text-align: center;
-  font-family:agency fb;
+  font-family:Source Sans Pro;
   font-size: 24px;
   color:white;
 }
@@ -610,7 +614,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 #competences h3{
   width: 90%;
   font-size: 45px;
-  font-family:agency fb,sans-seri;
+  font-family:Source Sans Pro,sans-seri;
 }
 #c1{
   height:200px;
@@ -700,7 +704,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
   #competences h3{
     width: 90%;
     font-size: 45px;
-    font-family:agency fb,sans-seri;
+    font-family:Source Sans Pro,sans-seri;
   }
   #c1{
     height:180px;
@@ -816,7 +820,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
     width: 100%;
     background: #3385ff;
     text-align: center;
-    font-family:agency fb;
+    font-family:Source Sans Pro;
     font-size: 24px;
     color:white;
   }
@@ -1063,12 +1067,22 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 
 
 @media only screen  and (max-width:600px) {
-
+  header{
+    z-index: 100;
+  }
+ header ul:nth-child(2) li {
+   display: none;
+ }
+  header ul:nth-child(2) #home{
+    display: block;
+  }
 
 
   #banniere h2 {
-    width:50%;
+    width:100%;
     font-size: 45px;
+    display: flex;
+    justify-content: center;
   }
 
 
@@ -1098,7 +1112,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
   #competences h3{
     width: 90%;
     font-size: 45px;
-    font-family:agency fb,sans-seri;
+    font-family:Source Sans Pro,sans-seri;
   }
   #c1{
     height:180px;
@@ -1214,7 +1228,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
     width: 100%;
     background: #3385ff;
     text-align: center;
-    font-family:agency fb;
+    font-family:Source Sans Pro;
     font-size: 24px;
     color:white;
   }
@@ -1368,13 +1382,10 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 
   }
   #fleche{
-
-      position: fixed;
+     width: 100%;
+      position: absolute;
       top:93%;
        left:94%;
-
-
-
 
   }
   #fleche button{
@@ -1386,7 +1397,52 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
        color: white;
   }
 
+#home{
+  position: relative;
+  left:-4%;
+}
 
+#homebar{
+ height:520px;
+ width: 100%;
+ background: white;
+ position: fixed;
+ top: 11%;
+ display: none;
+ z-index: 99;
+ display: flex;
+ justify-content: flex-start;
+ text-align: left;
+
+}
+
+#homebar ul {
+  width: 100%;
+  height: 450px;
+  /* background: orange; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+#homebar ul a{
+  width: 90%;
+  color: inherit;
+  text-decoration: none;
+  margin-bottom: 25px;
+}
+#homebar ul li{
+   height:50px;
+   width:100%;
+   /* background: silver; */
+   list-style: none;
+   display: flex;
+  align-items: center;
+  border-bottom: 2px solid silver;
+}
+#decouvrir {
+  background: blue;
+}
 
 
 
@@ -1436,7 +1492,8 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 
 
   #banniere h2 {
-    width:50%;
+    /* background: red; */
+    width:20%;
     font-size: 35px;
   }
 
@@ -1464,15 +1521,15 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
   }
   #competences h3{
     width: 90%;
-    font-size: 45px;
-    font-family:agency fb,sans-seri;
+    font-size: 25px;
+    font-family:Source Sans Pro,sans-seri;
   }
   #c1{
     height:220px;
     width:95%;
     display: flex;
     justify-content: space-between;
-    padding:25px;
+    padding:15px;
   }
   #c1 span{
     height: 200px;
@@ -1582,7 +1639,7 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
     width: 100%;
     background: #3385ff;
     text-align: center;
-    font-family:agency fb;
+    font-family:Source Sans Pro;
     font-size: 24px;
     color:white;
   }
@@ -1846,21 +1903,17 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
   #competences h3{
     width: 90%;
     font-size: 25px;
-    font-family:agency fb,sans-seri;
+    font-family:Source Sans Pro,sans-seri;
   }
   #c1{
     height:220px;
-    width:95%;
+    width:100%;
     display: flex;
     justify-content: space-between;
-    padding-top:25px;
-    padding-left:5px;
-    padding-right:25px;
-    padding-bottom: :25px;
-  }
+    }
   #c1 span{
     height: 200px;
-    width: 25%;
+    width: 55%;
     font-size: 32px;
     background:  #3385ff;
     color: white;
@@ -1972,7 +2025,7 @@ font-size: 15px;
     width: 100%;
     background: #3385ff;
     text-align: center;
-    font-family:agency fb;
+    font-family:Source Sans Pro;
     font-size: 24px;
     color:white;
   }
