--- a/style.css
+++ b/style.css
@@ -52,13 +52,14 @@ header a {
 #banniere{
      height:450px;
      width: 100%;
-     background: url("./image/06.jpg");
+     background: url("./image/06.jpg"),url("./image/8.jpg");
+        background-position: center;
+           background-clip:transparent;
+     background-blend-mode: darken;
+
      flex-direction: column;
-     background-color: black;
-     /* filter:grayscale(35%) contrast(55%); */
-      background-blend-mode:lighten;
      background-size: cover;
-     background-position: center;
+
      display: flex;
      justify-content: center;
      align-items: center;
