--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body{
   margin: 0;
   background:#e6e6e6;
 }
+body,h1,h2,h3,h4,h5,p,strong{
+  font-family: candara,cursive,sans-serif;
+
+}
 
 header{
   height: 60px;
