--- a/style.css
+++ b/style.css
@@ -1104,6 +1104,15 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 
 
 @media only screen  and (max-width:600px) {
+  body{
+    padding: 0;
+    margin: 0;
+    background:#e6e6e6;
+  }
+  body,h1,h2,h3,h4,h5,p,strong{
+    font-family: candara,cursive,sans-serif;
+
+  }
   header{
     z-index: 100;
   }
@@ -1521,7 +1530,15 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 
 @media only screen  and (max-width:475px) {
 
+  body{
+    padding: 0;
+    margin: 0;
+    background:#e6e6e6;
+  }
+  body,h1,h2,h3,h4,h5,p,strong{
+    font-family: candara,cursive,sans-serif;
 
+  }
 
   #banniere h2 {
     /* background: red; */
@@ -1902,7 +1919,15 @@ form input[type="submit"]:hover,input[type="reset"]:hover{
 @media only screen  and (max-width:320px) {
 
 
+  body{
+    padding: 0;
+    margin: 0;
+    background:#e6e6e6;
+  }
+  body,h1,h2,h3,h4,h5,p,strong{
+    font-family: candara,cursive,sans-serif;
 
+  }
   #banniere h2 {
     width:60%;
     font-size:25px;
