--- a/style.css
+++ b/style.css
@@ -2120,15 +2120,13 @@ font-size: 15px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    /* background-color:red; */
+     
     margin-bottom: 25px;
 
   }
   #p1 #num{
     height:70px;
     width: 98%;
-    border:2px solid royalblue;
     background: royalblue;
     text-align: center;
     display: flex;
@@ -2148,6 +2146,7 @@ font-size: 15px;
     justify-content: space-around;
     align-items: center;
     overflow: hidden;
+     word-wrap: break-word;
 
 
   }
